# mcp_for_bigquery

./: README.md
fast_api/: Dockerfile  pyproject.toml
fast_api/src/fast_api/: server.py
